Configurar dominio personalizado kirth8.site

--- a/helloportafolio/package.json
+++ b/helloportafolio/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://kirth8.github.io/helloportafolio",
+  "homepage": "https://kirth8.site",
   "name": "helloportafolio",
   "version": "0.1.0",
   "private": true,
